--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goproof",
   "main": "./lib/goproof",
   "version": "0.1.0",
-  "description": "Runs gofmt and goimports on Go source files",
+  "description": "Runs gofmt and goimports on Go source files on save",
   "author": "Mitchell Riley",
   "repository": "https://github.com/mitchr/goproof",
   "keywords": [
